# opensource-cobol

./: AUTHORS  COBOL85 tests  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  cob-config.in  config.h.in  configure  configure.ac  libcob.h  tarstamp.h
.github/workflows/: workflow.yml
cobc/: ChangeLog  Makefile.am  Makefile.in  cobc.c  cobc.h  codegen.c  config.c  config.def  error.c  field.c  flag.def  parser.c  parser.h  parser.y  pplex.c  pplex.l  pplex.l.m4  ppparse.c  ppparse.h  ppparse.y  reserved.c  scanner.c  scanner.l  scanner.l.m4  tree.c  tree.h  typeck.c  warning.def
config/: Makefile.am  Makefile.in  default-en.conf  default-jp.conf  default.conf  jp-compat.conf  mf.conf
copy/: ChangeLog  Makefile.am  Makefile.in
github/: workflows
lib/: Makefile.am  Makefile.in  getopt.c  getopt1.c  gettext.h
libcob/: ChangeLog  Makefile  Makefile.am  Makefile.in  call.c  call.h  coblocal.h  common.c  common.h  fileio.c  fileio.h  intrinsic.c  intrinsic.h  json.c  json.h  libcob.la  libcob_la-call.lo  libcob_la-common.lo  libcob_la-fileio.lo  libcob_la-intrinsic.lo  libcob_la-intrinsic.loT  libcob_la-move.lo  libcob_la-numeric.lo  libcob_la-screenio.lo  libcob_la-strings.lo  libcob_la-termio.lo  move.c  move.h  numeric.c  screenio.c  screenio.h  strings.c  system.def  termio.c
libcob/.deps/: libcob_la-call.Plo  libcob_la-common.Plo  libcob_la-fileio.Plo  libcob_la-intrinsic.Plo  libcob_la-move.Plo  libcob_la-numeric.Plo  libcob_la-screenio.Plo  libcob_la-strings.Plo  libcob_la-termio.Plo
libcob/.libs/: libcob.la  libcob.lai  libcob.so.1.0.0
pdcurses/: curses.h  exp-base.def
pdcurses/pdcurses/: addch.c  getch.c  refresh.c
pdcurses/win32/: pdckbd.c  pdcscrn.c  pdcwin.h
po/: Makevars  ja.gmo  ja.po  opensource-cobol-1.3.1J.pot  opensource-cobol-1.3J.pot
tests/: Makefile.am  Makefile.in  atlocal.in  data-rep  i18n_sjis  i18n_sjis.at  i18n_utf8  i18n_utf8.at  jp-compat  jp-compat.at  jp-compat_isam.at  jp-compat_notisam.at  package.m4  run  syntax  syntax.at
tests/cobol85/: Makefile.in
tests/data-rep.src/: display.at
tests/i18n_sjis.src/: error-print.at  national.at  pic-n.at  pic-x.at  program-id.at  user-defined-word.at
tests/i18n_utf8.src/: error-print.at  national.at  pic-bn.at  pic-n.at  pic-x.at  program-id.at  user-defined-word.at  warn-mixture-byte.at
tests/jp-compat.src/: compat-check.at  copy-joining.at  copy-leading-trailing.at  data-desc-no-dot.at  empty-imperative.at  file-control.at  file-desc.at  file-userfh.at  intr-funcs.at  job-date.at  special-names.at  spl-registers.at  split-keys.at  system-routine.at
tests/run.src/: extensions.at  misc.at  ref-mod.at  subscripts.at
tests/syntax.src/: copy.at  definition.at  move.at  occurs.at  redefines.at
texi/: Makefile.am  Makefile.in  open-cobol.info  stamp-vti  version.texi
vbisam/libvbisam/: ischeck.c  isdelete.c  ishelper.c  isrecover.c  isrewrite.c  vblowlevel.c  vbmemio.c
vbisam/tests/: mvtest.c
win32/: README  config.h  opencobol.sln  readme.txt  startVS.bat
win32/cobc/: cobc.vcxproj
win32/cobcrun/: cobcrun.vcxproj
win32/exinc/: curses.h  gmp.h
win32/exlib/win32/Debug/: mpir.exp  mpir.ilk  mpir.lib  pdcurses.exp  pdcurses.ilk  pdcurses.lib
win32/exlib/win32/Release/: mpir.exp  mpir.ilk  mpir.lib  pdcurses.exp  pdcurses.lib
win32/exlib/x64/Debug/: mpir.exp  mpir.ilk  mpir.lib  pdcurses.exp  pdcurses.ilk  pdcurses.lib
win32/exlib/x64/Release/: mpir.exp  mpir.ilk  mpir.lib  pdcurses.exp  pdcurses.lib
win32/libcob/: libcob.vcxproj
win32/pdcurses/: pdcurses.def  pdcurses.vcxproj  pdcurses.vcxproj.filters
win32/vbisam/: vbisam.vcxproj
